[gd_scene load_steps=20 format=3 uid="uid://b6m04vu6j2d81"]

[ext_resource type="Script" path="res://scripts/inventory/raincloud.gd" id="1_ojbbr"]
[ext_resource type="Texture2D" uid="uid://dtef7up703xuj" path="res://sprites/items/item_spawnables/raincloud.png" id="2_3hp8t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6rgrc"]
atlas = ExtResource("2_3hp8t")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1jyd"]
atlas = ExtResource("2_3hp8t")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nehre"]
atlas = ExtResource("2_3hp8t")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lwav"]
atlas = ExtResource("2_3hp8t")
region = Rect2(0, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qf2j"]
atlas = ExtResource("2_3hp8t")
region = Rect2(40, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nrip"]
atlas = ExtResource("2_3hp8t")
region = Rect2(80, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8rwd"]
atlas = ExtResource("2_3hp8t")
region = Rect2(0, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_84iw3"]
atlas = ExtResource("2_3hp8t")
region = Rect2(40, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc7ob"]
atlas = ExtResource("2_3hp8t")
region = Rect2(80, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4i5c"]
atlas = ExtResource("2_3hp8t")
region = Rect2(0, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6dbq"]
atlas = ExtResource("2_3hp8t")
region = Rect2(40, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xklt1"]
atlas = ExtResource("2_3hp8t")
region = Rect2(80, 80, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_l4on3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rgrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1jyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nehre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lwav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qf2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8rwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84iw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc7ob")
}],
"loop": false,
"name": &"default",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4i5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6dbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xklt1")
}],
"loop": true,
"name": &"loop",
"speed": 18.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5uhi"]
size = Vector2(37, 28)

[sub_resource type="Animation" id="Animation_evvqd"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_brj3k"]
resource_name = "scale_in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jan0t"]
_data = {
"fade_out": SubResource("Animation_evvqd"),
"scale_in": SubResource("Animation_brj3k")
}

[node name="raincloud" type="Node2D"]
texture_filter = 1
scale = Vector2(1e-05, 1e-05)
script = ExtResource("1_ojbbr")

[node name="main_body" type="Node2D" parent="."]

[node name="main_body_2" type="Node2D" parent="main_body"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="main_body/main_body_2"]
sprite_frames = SubResource("SpriteFrames_l4on3")
animation = &"loop"
autoplay = "default"

[node name="Area2D" type="Area2D" parent="main_body/main_body_2"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_body/main_body_2/Area2D"]
position = Vector2(-0.5, 4)
shape = SubResource("RectangleShape2D_h5uhi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "scale_in"
libraries = {
"": SubResource("AnimationLibrary_jan0t")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="toggle_damage" type="Timer" parent="."]
autostart = true

[connection signal="animation_finished" from="main_body/main_body_2/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="main_body/main_body_2/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="toggle_damage" to="." method="_on_toggle_damage_timeout"]
